Moved source to root for easier usage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,20 @@ file(GLOB_RECURSE InputSources
 	"KeyBindingCollection.h"
 	"KeyBindingCollection.cpp"
 	"Typedefs.h"
-	"Alloc.h"
 	"LogInput.h"
 )
+set(USE_CUSTOM_ALLOCATOR_HEADER_FOR_INPUT true)
+set(CUSTOM_ALLOCATOR_HEADER_FOR_INPUT "<memory/Alloc.h>")
+
+if(USE_CUSTOM_ALLOCATOR_HEADER_FOR_INPUT)
+else(USE_CUSTOM_ALLOCATOR_HEADER_FOR_INPUT)
+	list(APPEND InputSources "Alloc.h")
+endif(USE_CUSTOM_ALLOCATOR_HEADER_FOR_INPUT)
 
 add_definitions(-DINPUT_DLL_EXPORT)
+add_definitions(-DINPUT_ALLOCATION_HEADER=${CUSTOM_ALLOCATOR_HEADER_FOR_INPUT})
 add_library(Input SHARED ${InputSources})
-target_link_libraries(Input Utility ${SDL2Library})
+target_link_libraries(Input Utility ${SDL2Library} Memory)
 
 install(
 	TARGETS Input DESTINATION lib
