--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(${CMAKE_PROJECT_NAME} main.cpp)
+add_executable(${CMAKE_PROJECT_NAME} Main.cpp)
 # Link libraries to the executable
 target_link_libraries(${CMAKE_PROJECT_NAME} Utility Input ${SDL2Libraries})
