Revamped almost all input with separation of context and state. A state is how the HID state is. A context accumulates and processes states and messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB_RECURSE InputSources
-	"Input.h"
-	"Input.cpp"
-	"Gamepad.cpp"
-	"Gamepad.h"
+	"InputState.h"
+	"InputState.cpp"
+	"InputContext.h"
+	"InputContext.cpp"
+	"GamepadState.cpp"
+	"GamepadState.h"
+	"GamepadContext.h"
+	"GamepadContext.cpp"
 	"TextInput.h"
 	"TextInput.cpp"
 	"KeyBindings.h"
